crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_populate.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange populate

Check monochange.toml for missing default CLI workflow aliases. This version provides no defaults, so the configuration stays unchanged. Use `monochange command` to define custom workflows.

[1m[97mUsage:[0m [93mmonochange populate[0m [95m[OPTIONS][0m

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help (see a summary with '-h')

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
