crates/monochange/tests/snapshots/cli_clap_help__clap_long_help__monochange_preview.snap
---
source: crates/monochange/tests/cli_clap_help.rs
expression: render_help_snapshot(&path)
---
Version: [current]
Command: monochange preview

Preview planned version bumps, changelogs, and release artifacts without writing files

[1m[97mUsage:[0m monochange preview [--dry-run] [--diff] [--prepared-release <PATH>] [--format <FORMAT>] [--write-empty-release-record] [--release-json]

[1m[96mOptions:[0m
  [93m-h[0m, [93m--help[0m
          Print help

[1m[96mRelease Options:[0m
      [93m--dry-run[0m
          Run the command in dry-run mode when supported

      [93m--diff[0m
          Show unified file diffs for prepared release changes

      [93m--prepared-release[0m[95m [0m[95m<PATH>[0m
          Read or write the prepared release artifact at a specific path

[1m[96mOptions:[0m
      [93m--format[0m[95m [0m[95m<FORMAT>[0m
          Result format: text, Markdown, pretty JSON, or compact JSON

          [possible values: text, json, json-min, md]

      [93m--write-empty-release-record[0m
          Write a release record even when no packages change

      [93m--release-json[0m
          Write the prepared release record as JSON

[1m[96mGlobal Options:[0m
  [93m-q[0m, [93m--quiet[0m
          Suppress result, progress, and diagnostic output without changing execution

  [93m-v[0m, [93m--verbose[0m
          Show full result lists and logs, every step timing, and progress notes

      [93m--progress-format[0m[95m [0m[95m<FORMAT>[0m
          Control progress output on stderr

          [possible values: auto, unicode, ascii, json]

      [93m--jq[0m[95m [0m[95m<EXPRESSION>[0m
          Filter explicit JSON output; requires `--format json` or `--format json-min`

      [93m--snapshot[0m
          Print a normalized JSON snapshot for this command subtree
